<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_today">Today</string>
    <string name="menu_expense">Expense Report</string>
    <string name="menu_category">Category</string>
    <string name="menu_settings">Settings</string>

    <string name="today_total">Today\'s total</string>
    <string name="today_expenses">Today\'s expenses</string>
    <string name="expense_category_name_string">Category</string>
    <string name="total_string">Total</string>
    <string name="no_expenses">There are no expenses.</string>

    <string name="add_category">New category</string>
    <string name="hint_add_category">Enter category</string>
    <string name="save_category">Add</string>


    <string name="currency">Currency</string>
    <string name="USCurrency">US Dollar</string>
    <string name="Euro">Euro</string>
    <string name="BritishPound">British Pound</string>
    <string name="CanadianDollar">Canadian Dollar</string>
    <string name="AustralianDollar">Australian Dollar</string>
    <string name="ukraininanHryvnia">Ukraininan Hryvnia</string>
    <string name="RussianRouble">Russian Rouble</string>
    <string name="cancelButton">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>