<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DialogViewCurrency">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/currency"
        android:textColor="#3F51B5"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#3F51B5" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"> <!-- Ensure orientation is set to vertical -->

        <RadioButton
            android:id="@+id/radioButtonUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/USCurrency"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioButtonEuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Euro" />

        <RadioButton
            android:id="@+id/radioButtonPound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BritishPound" />

        <RadioButton
            android:id="@+id/radioButtonCd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CanadianDollar" />

        <RadioButton
            android:id="@+id/radioButtonAud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AustralianDollar" />

        <RadioButton
            android:id="@+id/radioButtonUh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ukraininanHryvnia" />

        <RadioButton
            android:id="@+id/radioButtonRr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RussianRouble" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCancel"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelButton"/>


</LinearLayout>
